[metadata]
name = pyam-iamc
author = pyam developers
author_email = pyam+owner@groups.io
license = Apache License 2.0
description = Analysis & visualization of integrated-assessment scenarios
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IAMconsortium/pyam

[options]
packages = pyam_iamc
package_dir =
    pyam_iamc = pyam
include_package_data = True
install_requires =
    argparse
    iam-units >= 2020.4.21
    numpy >= 1.19.0
    requests
    openpyxl
    pandas >= 1.1.1
    pint
    PyYAML
    matplotlib >= 3.2.0
    seaborn
    six
    xlrd >= 2.0
    pint >= 0.11
    setuptools >= 41
    setuptools_scm
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    coverage
    coveralls
    pytest < 6.0.0
    pytest-cov
    pytest-mpl < 0.12
optional_plotting =
    plotly
optional_io_formats =
    datapackage
    pandas-datareader
    unfccc_di_api >= 2.0
deploy =
    twine
    wheel
    setuptools
    setuptools_scm
tutorials =
    pypandoc
    nbformat
    nbconvert
    jupyter_client
    ipykernel
docs =
    sphinx
    nbsphinx
    sphinx-gallery
    cloud_sptheme
    pillow
    sphinxcontrib-bibtex < 2.0
    sphinxcontrib-programoutput
    numpydoc
    kaleido
    # docs requires 'tutorials'

[flake8]
max-line-length = 88
