[metadata]
name = pyam-iamc
author = file: AUTHORS.rst
license = Apache Software License 2.0
description = Analysis & visualization of integrated-assessment scenarios
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IAMconsortium/pyam
project_urls =
    Documentation = https://pyam-iamc.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = pyam
include_package_data = True

# NOTE TO DEVS
# If you change a minimum version below, please explicitly implement the change
# in our minimum-reqs test in the file ./.github/workflows/pytest-dependency.yml
# Please also add a section "Dependency changes" to the release notes
install_requires =
    iam-units >= 2020.4.21
    numpy >= 1.19.0
    requests
    openpyxl
    pandas >= 1.1.1, < 1.4
    pint <= 0.17
    PyYAML
    matplotlib >= 3.2.0
    seaborn
    six
    xlrd >= 2.0
    setuptools >= 41
    setuptools_scm
    # required explicitly for Python 3.7
    importlib_metadata
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    coverage
    coveralls
    pytest < 6.0.0
    pytest-cov
    pytest-mpl < 0.12
optional_plotting =
    plotly
optional_io_formats =
    datapackage
    pandas-datareader
    unfccc_di_api >= 2.0
    xarray
tutorials =
    pypandoc
    nbformat
    nbconvert
    jupyter_client
    ipykernel
docs =
    sphinx
    nbsphinx
    sphinx-gallery
    cloud_sptheme
    pillow
    sphinxcontrib-bibtex < 2.0
    sphinxcontrib-programoutput
    numpydoc
    kaleido
    autodocsumm
    # docs requires 'tutorials'

[flake8]
max-line-length = 88
