[metadata]
name = pyam-iamc
author = file: AUTHORS.rst
license = Apache Software License 2.0
description = Analysis & visualization of integrated-assessment scenarios
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IAMconsortium/pyam
project_urls =
    Documentation = https://pyam-iamc.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = pyam
include_package_data = True
python_requires = >=3.8, <3.12

# NOTE TO DEVS
# If you change a minimum version below, please explicitly implement the change
# in our minimum-reqs test in the file ./.github/workflows/pytest-dependency.yml
# Please also add a section "Dependency changes" to the release notes
install_requires =
    iam-units >= 2020.4.21
    ixmp4 >= 0.2.0
    numpy >= 1.19.0, < 1.24
    requests
    pyjwt
    httpx[http2]
    openpyxl
    # remove exception in test_io.py when changing requirement to pandas ≥ 1.5
    pandas >= 1.2.0
    scipy
    pint >= 0.13
    PyYAML
    matplotlib >= 3.5.0, < 3.7.1
    seaborn
    six
    setuptools >= 41
    setuptools_scm
    wquantiles
    xlsxwriter
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    coverage
    coveralls
    pytest
    pytest-cov
    pytest-mpl
optional_plotting =
    plotly
optional_io_formats =
    datapackage
    pandas-datareader
    xlrd
    unfccc_di_api >= 3.0.1
tutorials =
    pypandoc
    nbformat
    nbconvert >= 7.3
    jupyter_client
    ipykernel
docs =
    sphinx
    nbsphinx
    sphinx-gallery
    pillow
    numpydoc
    kaleido
    autodocsumm
    # docs requires 'tutorials'

[flake8]
max-line-length = 88
